[metadata]
name = gaussiancl
version = attr:gaussiancl.__version__
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = angular power spectra for transformed Gaussian random fields
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/cltools/gaussiancl
project_urls =
    Documentation = https://cltools.readthedocs.io/gaussiancl/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    transformcl>=2022.7.28
py_modules = gaussiancl
